--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <h3>Select an icon</h3>
         </div>
 
+        <button id="reset" onclick="location.reload()">Reset</button>
+
     </main>
 
     
